--- a/alio/src/Components/components.css
+++ b/alio/src/Components/components.css
@@ -1,4 +1,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;500&display=swap");
+
+a {
+  -webkit-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+  -moz-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+  -ms-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+  -o-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+  transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+  display: block;
+  margin: 20px auto;
+  max-width: 180px;
+  text-decoration: none;
+  border-radius: 4px;
+  padding: 20px 30px;
+}
+
+a.button {
+  color: rgba(30, 22, 54, 0.6);
+  box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
+}
+
+a.button:hover {
+  color: rgba(255, 255, 255, 0.85);
+  box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
+}
+
+a.button2 {
+  color: rgba(30, 22, 54, 0.6);
+  box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
+}
+
+a.button2:hover {
+  color: rgba(255, 255, 255, 0.85);
+  box-shadow: rgba(30, 22, 54, 0.7) 0 80px 0px 2px inset;
+}
+
 body {
   font-family: "Chakra Petch", sans-serif;
   text-align: center;
@@ -10,13 +45,11 @@ body {
   margin-left: 5rem;
   align-items: center;
 }
-
+.nameAndTotal {
+  display: flex;
+  flex-direction: column;
+}
 .containerStyles {
-  height: 50;
-  width: "50%";
-  background-color: "#e0e0de";
-  border-radius: 50;
-  margin: 50;
 }
 
 .fillerStyles {
@@ -40,7 +73,49 @@ body {
   font-size: 1rem;
   font-family: "Chakra Petch", sans-serif;
 }
-.nameAndTotal {
-  display: flex;
-  flex-direction: column;
+
+/* @media screen and (max-width : 1200px) { 
+  .box { 
+    font-size : 40px; 
+  } 
+}  */
+
+@media screen and (max-width: 768px) {
+  body {
+  }
+  /* header */
+  h1 {
+    font-size: 1.2rem;
+  }
+  p {
+    font-size: 0.6rem;
+  }
+  /* 치킨이름 */
+  .labelStyles {
+    /* padding: 5; */
+    font-weight: 500;
+    font-size: 1rem;
+  }
+  /* 버튼 */
+  a {
+    -webkit-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+    -moz-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+    -ms-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+    -o-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+    transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+    display: block;
+    margin: 10px auto;
+    max-width: 180px;
+    text-decoration: none;
+    border-radius: 4px;
+    padding: 10px 15px;
+    font-size: 0.5rem;
+  }
+  .containerStyles {
+    height: 20;
+    width: "50%";
+    background-color: "#e0e0de";
+    border-radius: 50;
+    margin: 50;
+  }
 }
